<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="otomasyon.kafeotomasyonu.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:text="@string/girisyap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/basliklar"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_mail"
            android:hint="@string/mail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/normalyazi"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_parola"
            android:layout_weight="1"
            android:hint="@string/parola"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/normalyazi"/>

        <Button
            android:text="@string/giris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_giris"
            style="@style/butonlar"/>

        <Button
            android:text="@string/parolasifirla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_parolasifirla"
            android:layout_gravity="center"
            style="@style/butonlar"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/pb_login"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>
