<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="otomasyon.kafeotomasyonu.ParolaSifirlaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:text="@string/parolanizisifirlayin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/basliklar"
            android:gravity="center"
            android:paddingBottom="35px"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/et_sifirlamail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mail"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:text="@string/sifirla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/btn_sifirla"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/normalyazi"/>
    </LinearLayout>

</RelativeLayout>
